문서함 카운트 기능 구현

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3272,8 +3272,8 @@ table[id=documentDisplay] td {
   line-height: inherit;
   font-size: 0.688rem;
   font-weight: 500;
-  background-color: #8B9094;
-  color: #E1E6EA;
+  background-color: #63686C;
+  color: #F6F8FA;
 }
 .z-gnb .z-menu-area .z-gnb .z-token-count.z-active {
   color: #FFFFFF;
