#10919 error/success (validation) 메시지 처리 구현
- 샘플 코드 구현

--- a/src/main/resources/public/scss/portal/portal.scss
+++ b/src/main/resources/public/scss/portal/portal.scss
@@ -17,6 +17,7 @@
 @import '_elements.scss';
 @import '_buttons.scss';
 @import '_alerts.scss';
+@import '_validations.scss';
 @import '_scrollbars.scss';
 @import '_file-uploader.scss';
 @import '_avatar.scss';
