--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1074,8 +1074,8 @@ textarea:not(.z-textarea):read-only {
   cursor: default;
 }
 textarea:not(.z-textarea).error {
-  color: #ff405a !important;
-  border: 0.0625rem solid #ff405a !important;
+  color: #F52525 !important;
+  border: 0.0625rem solid #F52525 !important;
 }
 
 table {
@@ -1392,6 +1392,18 @@ label {
   -webkit-box-shadow: 0 0 0.125rem 0 #2578ce;
   -moz-box-shadow: 0 0 0.125rem 0 #2578ce;
   box-shadow: 0 0 0.125rem 0 #2578ce;
+}
+.z-input:not(:disabled):focus[data-error], .z-input:not(:read-only):focus[data-error] {
+  border: 0.0625rem solid #F52525;
+  -webkit-box-shadow: 0 0 0 0 #FFFFFF;
+  -moz-box-shadow: 0 0 0 0 #FFFFFF;
+  box-shadow: 0 0 0 0 #FFFFFF;
+}
+.z-input:not(:disabled):focus[data-success], .z-input:not(:read-only):focus[data-success] {
+  border: 0.0625rem solid #5CA21B;
+  -webkit-box-shadow: 0 0 0 0 #FFFFFF;
+  -moz-box-shadow: 0 0 0 0 #FFFFFF;
+  box-shadow: 0 0 0 0 #FFFFFF;
 }
 .z-input:not(:disabled):active, .z-input:not(:read-only):active {
   outline: 0;
