--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -836,8 +836,8 @@ textarea:not(.z-textarea):read-only {
   cursor: default;
 }
 textarea:not(.z-textarea).error {
-  color: #ff405a !important;
-  border: 0.0625rem solid #ff405a !important;
+  color: #F52525 !important;
+  border: 0.0625rem solid #F52525 !important;
 }
 
 table {
@@ -1154,6 +1154,18 @@ label {
   -webkit-box-shadow: 0 0 0.125rem 0 #2578ce;
   -moz-box-shadow: 0 0 0.125rem 0 #2578ce;
   box-shadow: 0 0 0.125rem 0 #2578ce;
+}
+.z-input:not(:disabled):focus[data-error], .z-input:not(:read-only):focus[data-error] {
+  border: 0.0625rem solid #F52525;
+  -webkit-box-shadow: 0 0 0 0 #FFFFFF;
+  -moz-box-shadow: 0 0 0 0 #FFFFFF;
+  box-shadow: 0 0 0 0 #FFFFFF;
+}
+.z-input:not(:disabled):focus[data-success], .z-input:not(:read-only):focus[data-success] {
+  border: 0.0625rem solid #5CA21B;
+  -webkit-box-shadow: 0 0 0 0 #FFFFFF;
+  -moz-box-shadow: 0 0 0 0 #FFFFFF;
+  box-shadow: 0 0 0 0 #FFFFFF;
 }
 .z-input:not(:disabled):active, .z-input:not(:read-only):active {
   outline: 0;
@@ -3802,6 +3814,54 @@ table[id=documentDisplay] td {
     margin: 0.5em;
   }
 }
+/* _validations.scss
+ *
+ * 파일 경로 : template/_validations.scss
+ * @description validation message
+ * @author jy.lim
+ * @version 1.0
+ */
+.z-validation.error {
+  display: inherit;
+  height: 2rem;
+  margin: 0.25rem 0;
+  padding: 0.375rem 0.375rem 0.375rem 2.5rem;
+  border: 0.0625rem solid #FEF2EB;
+  color: #F52525;
+  background-color: #FEF2EB;
+  background-image: url("../media/icons/icon_error.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: 1rem;
+  background-position-y: center;
+}
+.z-validation.success {
+  display: inherit;
+  height: 2rem;
+  margin: 0.25rem 0;
+  padding: 0.375rem 0.375rem 0.375rem 2.5rem;
+  border: 0.0625rem solid #F6FCE0;
+  color: #5CA21B;
+  background-color: #F6FCE0;
+  background-image: url("../media/icons/icon_success.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: 1rem;
+  background-position-y: center;
+}
+.z-validation .z-button-clear {
+  padding-right: 0.9375rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #8B9094;
+}
+
 /* _scrollbars.scss 
  *
  * 파일 경로 : template/_scrollbars.scss
