--- a/src/main/resources/public/scss/process/process.scss
+++ b/src/main/resources/public/scss/process/process.scss
@@ -17,6 +17,7 @@
 @import '_elements.scss';
 @import '_buttons.scss';
 @import '_alerts.scss';
+@import '_validations.scss';
 @import '_scrollbars.scss';
 @import '_color-picker.scss';
 @import '_tooltip.scss';
