--- a/src/main/resources/public/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/scss/theme/default/itsm.scss
@@ -18,6 +18,7 @@
 @import '_gnb.scss';
 @import '_top.scss';
 @import '_alerts.scss';
+@import '_validations.scss';
 @import '_scrollbars.scss';
 @import '_file-uploader.scss';
 @import '_avatar.scss';
