--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -80,6 +80,10 @@ input, button, select, optgroup, textarea {
   max-width: 100%;
 }
 
+:root {
+  --data-color: "";
+}
+
 /* _alignments.scss 
  *
  * 파일 경로 : template/utilities/_alignments.scss
@@ -748,16 +752,6 @@ input, button, select, optgroup, textarea {
   -webkit-mask-position: center;
   mask-position: center;
 }
-.z-icon.i-water-drop {
-  width: 1.75rem;
-  height: 1.75rem;
-  -webkit-mask-image: url("../media/icons/icon_water_drop.svg");
-  mask-image: url("../media/icons/icon_water_drop.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-}
 
 /* _layout.scss
  *
@@ -1356,7 +1350,7 @@ textarea:not(.z-textarea) {
   resize: vertical;
 }
 textarea:not(.z-textarea)::placeholder {
-  color: #ACB4BF;
+  color: #ABB0B5;
 }
 textarea:not(.z-textarea):not(:disabled):focus, textarea:not(.z-textarea):not(:read-only):focus {
   outline: 0;
@@ -1480,7 +1474,7 @@ label {
   border-color: #CFD5D9;
 }
 .radio input[type=radio]:not(:disabled):checked + span::after {
-  background-color: #0098FF;
+  background-color: #339AF0;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
   -o-transform: translate(4px, 9px) scale(1);
@@ -1554,7 +1548,7 @@ label {
   left: 0;
   width: 0.75rem;
   height: 0.375rem;
-  border: 0.125rem solid #0098FF;
+  border: 0.125rem solid #339AF0;
   border-right: none;
   border-top: none;
   -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
@@ -1633,7 +1627,7 @@ label {
   -moz-border-radius: 50%;
 }
 .switch input[type=checkbox]:checked + span {
-  background-color: #0098FF;
+  background-color: #339AF0;
 }
 .switch input[type=checkbox]:checked + span::before {
   -webkit-transform: translate(2.875rem, 0);
