--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -79,6 +79,10 @@ input, button, select, optgroup, textarea {
   max-width: 100%;
 }
 
+:root {
+  --data-color: "";
+}
+
 /* _alignments.scss 
  *
  * 파일 경로 : template/utilities/_alignments.scss
@@ -747,16 +751,6 @@ input, button, select, optgroup, textarea {
   -webkit-mask-position: center;
   mask-position: center;
 }
-.z-icon.i-water-drop {
-  width: 1.75rem;
-  height: 1.75rem;
-  -webkit-mask-image: url("../media/icons/icon_water_drop.svg");
-  mask-image: url("../media/icons/icon_water_drop.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-}
 
 /* _elements.scss
  *
@@ -830,7 +824,7 @@ textarea:not(.z-textarea) {
   resize: vertical;
 }
 textarea:not(.z-textarea)::placeholder {
-  color: #ACB4BF;
+  color: #ABB0B5;
 }
 textarea:not(.z-textarea):not(:disabled):focus, textarea:not(.z-textarea):not(:read-only):focus {
   outline: 0;
@@ -954,7 +948,7 @@ label {
   border-color: #CFD5D9;
 }
 .radio input[type=radio]:not(:disabled):checked + span::after {
-  background-color: #0098FF;
+  background-color: #339AF0;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
   -o-transform: translate(4px, 9px) scale(1);
@@ -1028,7 +1022,7 @@ label {
   left: 0;
   width: 0.75rem;
   height: 0.375rem;
-  border: 0.125rem solid #0098FF;
+  border: 0.125rem solid #339AF0;
   border-right: none;
   border-top: none;
   -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
@@ -1107,7 +1101,7 @@ label {
   -moz-border-radius: 50%;
 }
 .switch input[type=checkbox]:checked + span {
-  background-color: #0098FF;
+  background-color: #339AF0;
 }
 .switch input[type=checkbox]:checked + span::before {
   -webkit-transform: translate(2.875rem, 0);
@@ -5679,7 +5673,58 @@ span.modal_node_selected label {
   visibility: visible;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list {
-  margin: 0.75rem 0;
+  display: flex;
+  flex-direction: row;
+  margin: 0.5rem 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list > *:not(:last-child) {
+  margin: 0 8px 0 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+  cursor: pointer;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item .z-custom-color-palette-item-inner {
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  pointer-events: none;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item .z-custom-color-palette-item-clear {
+  width: 1rem;
+  height: 1rem;
+  line-height: 0.3125rem;
+  position: absolute;
+  top: -0.25rem;
+  right: -0.25rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  background-color: #F52525;
+  padding: 0;
+  visibility: hidden;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item .z-custom-color-palette-item-clear .z-icon.i-clear {
+  width: 0.5rem;
+  height: 0.5rem;
+  background: #FFFFFF;
+  pointer-events: none;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item.selected {
+  -webkit-box-shadow: inset 0 0 0 0.0625rem #339AF0;
+  -moz-box-shadow: inset 0 0 0 0.0625rem #339AF0;
+  box-shadow: inset 0 0 0 0.0625rem #339AF0;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus {
   background-color: #FFFFFF;
@@ -5690,8 +5735,8 @@ span.modal_node_selected label {
   padding: 0 0.0625rem;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus .z-icon.i-plus {
-  -webkit-mask-size: 10px;
-  mask-size: 10px;
+  -webkit-mask-size: 0.625rem;
+  mask-size: 0.625rem;
   background: #8B9094;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:focus {
@@ -5716,6 +5761,9 @@ span.modal_node_selected label {
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:enabled:active .z-icon.i-plus, .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:enabled.active .z-icon.i-plus {
   background: #1959AC;
 }
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list.editable .z-custom-color-palette-item .z-custom-color-palette-item-clear {
+  visibility: visible;
+}
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container {
   display: none;
 }
@@ -5726,11 +5774,21 @@ span.modal_node_selected label {
   display: grid;
   grid-template-columns: 1.75rem 5rem 3rem 3rem 3rem 3.75rem;
   grid-template-rows: 2.25rem 2.25rem;
-  gab: 0 0.5rem;
+  gap: 0 0.5rem;
   font-weight: 500;
 }
-.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-icon.i-water-drop {
-  background: #8B9094;
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-icon.i-water-drop .water-drop-outer {
+  fill-opacity: 1;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-icon.i-water-drop .water-drop-inner {
+  fill-opacity: 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-icon.i-water-drop.on .water-drop-outer {
+  fill-opacity: 0;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-icon.i-water-drop.on .water-drop-inner {
+  fill: var(--data-color, #8B9094);
+  fill-opacity: 1;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-control-container .z-custom-color-control .z-input {
   padding: 0 0.5rem;
