--- a/src/main/resources/public/scss/template/_color-picker.scss
+++ b/src/main/resources/public/scss/template/_color-picker.scss
@@ -191,7 +191,7 @@
         &:first-child {
           margin-bottom: 0.5rem; // 8px
         }
-
+        // color palette item
         .#{$common-prefix}palette-item {
           display: flex;
           flex-direction: row;
@@ -246,7 +246,60 @@
 
       // 사용자 색상 목록 영역
       .#{$common-prefix}custom-color-list {
-        margin: 0.75rem 0; // 12px 0
+        display: flex;
+        flex-direction: row;
+        margin: 0.5rem 0; // 12px 0
+
+        > *:not(:last-child) {
+          margin: 0 8px 0 0; // 0 8px 0 0
+        }
+
+        // custom color palette item
+        .#{$common-prefix}custom-color-palette-item {
+          @include relative();
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          width: 1.75rem; // 28px
+          height: 1.75rem; // 28px
+          @include borderRadius($color-palette-border-radius);
+
+          cursor: pointer;
+
+          .#{$common-prefix}custom-color-palette-item-inner {
+            width: 1.25rem; // 20px
+            height: 1.25rem; // 20px
+            @include borderRadius($color-palette-inset-border-radius);
+            pointer-events: none;
+          }
+
+          // X 버튼
+          .#{$common-prefix}custom-color-palette-item-clear {
+            width: 1rem; // 16px
+            height: 1rem; // 16px
+            line-height: 0.3125rem; // 5px
+            @include absolute($top: -0.25rem,$right: -0.25rem); // -4px -4px
+            @include borderRadius(50%);
+            background-color: $error-color;
+            padding: 0;
+            visibility: hidden;
+
+            .#{$common-prefix}icon {
+              &.i-clear {
+                width: 0.5rem; // 8px
+                height: 0.5rem; // 8px
+                background: $white;
+                pointer-events: none;
+              }
+            }
+          }
+
+         &.selected {
+            @include boxShadow(0, 0, 0, $color-palette-selected-border-width, $color-palette-selected-border-color, true);
+          }
+        }
+
         // [+] 버튼
         .#{$common-prefix}custom-color-plus {
           background-color: map-get($custom-color-plus, 'default', 'background');
@@ -259,8 +312,8 @@
 
           .#{$common-prefix}icon {
             &.i-plus {
-              -webkit-mask-size: 10px;
-              mask-size: 10px;
+              -webkit-mask-size: 0.625rem; // 10px
+              mask-size: 0.625rem; // 10px
               background: map-get($custom-color-plus, 'default', 'font');
             }
           }
@@ -305,6 +358,16 @@
             }
           }
         }
+
+        // 편집 가능시 사용자 색상 삭제 버튼 show
+        &.editable {
+          .#{$common-prefix}custom-color-palette-item {
+            // X 버튼
+            .#{$common-prefix}custom-color-palette-item-clear {
+              visibility: visible;
+            }
+          }
+        }
       }
 
       // 물방울, hex, rgb, 추가 버튼 영역
@@ -319,13 +382,21 @@
           display: grid;
           grid-template-columns:  1.75rem 5rem 3rem 3rem 3rem 3.75rem; // 28px 80px 48px 48px 48px 60px
           grid-template-rows: 2.25rem 2.25rem; // 36px 36px
-          gab: 0 0.5rem; // 0 8px
+          gap: 0 0.5rem; // 0 8px
           font-weight: $font-weight-medium;
 
           // 물방울 아이콘
           .#{$common-prefix}icon {
             &.i-water-drop {
-              background: $color-picker-icon-color;
+              .water-drop-outer { fill-opacity: 1; }
+              .water-drop-inner { fill-opacity: 0; }
+              &.on {
+                .water-drop-outer { fill-opacity: 0; }
+                .water-drop-inner {
+                  fill: var(--data-color, #{$color-picker-icon-color});
+                  fill-opacity: 1;
+                }
+              }
             }
           }
 
