--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -41,25 +41,6 @@ $font-folder-path:                            '../fonts';
 $icon-folder-path:                            '../media/icons/';
 $image-folder-path:                           '../media/images/';
 
-// color
-$black:                                       #000000 !default;
-$gray:                                        #ACB4BF !default;
-$white:                                       #ffffff !default;
-$red:                                         #ff405a !default;
-$blue:                                        #0098FF !default;
-$orange:                                      #FF7319 !default;
-$green:                                       #00C462 !default;
-
-$color: (
-  'black':                                    $black,
-  'gray':                                     $gray,
-  'white':                                    $white,
-  'red':                                      $red,
-  'blue':                                     $blue,
-  'orange':                                   $orange,
-  'green':                                    $green
-) !default;
-
 // black color
 $blacks: (
   'focus':                                    #283238,
@@ -91,6 +72,16 @@ $oranges: (
   'light':                                    #FF850A
 ) !default;
 
+$gray:                                        #ACB4BF !default;
+$red:                                         #ff405a !default;
+$blue:                                        #0098FF !default;
+$orange:                                      #FF7319 !default;
+$green:                                       #00C462 !default;
+
+// color
+$error-color:                                 $red500;
+$success-color:                               $green500;
+
 // common prefix
 $common-prefix:                               'z-';
 
@@ -108,7 +99,7 @@ $element-indent:                              1rem; // 16px 내부 들여쓰기
 $element-shadow-color:                        $gray300;
 
 // 사용자 미입력시 나올 문구 = placeholder
-$element-placeholder-font-color:              $gray;
+$element-placeholder-font-color:              $gray400;
 
 // 키보드 또는 선택시, 해당 element에 포커싱되었을때 사용하는 디자인 변수
 $element-focus-border-color:                  $blue600;
@@ -136,7 +127,7 @@ $element-readonly-border-width:               0.0625rem; // 1px
 $element-readonly-border:                     $element-readonly-border-width solid $element-readonly-border-color;
 
 // 체크박스, 라디오 버튼, 스위치 등 선택되었을때 (ON) 디자인 변수
-$element-checked-bg-color:                    $blue;
+$element-checked-bg-color:                    $blue500;
 
 //셀렉트 박스 선택되었을때 옵션에 사용하는 디자인 변수
 $element-selected-font-color:                 $blue500;
@@ -147,6 +138,7 @@ $element-error-font-color:                    $red !important;
 $element-error-border-color:                  $red;
 $element-error-border-width:                  0.0625rem; // 1px
 $element-error-border:                        $element-error-border-width solid $element-error-border-color !important;
+
 
 // headings
 $h1-font-size:                                $font-size-s * 2.25; // 36px
@@ -438,6 +430,9 @@ $color-picker-colorchip-border-width:        0.375rem;   // 6px
 $color-picker-colorchip-border-color:        $white;
 
 // color picker
+:root {
+  --data-color: '';
+}
 $color-picker-width:                         7.5rem; // 120px
 $color-picker-font-family:                   $font-family-s;
 $color-picker-font-size:                     $font-size-xs;
