--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -143,7 +143,7 @@
 
         // ColorPicker 초기화
         function initColorPicker() {
-            new zColorPicker(document.getElementById('documentColor'));
+            new zColorPicker(document.getElementById('documentColor'), { type: 'fill' });
             /*let selectedColorBox = document.getElementById('selected-color');
             let elementObject = document.getElementById('documentColor');
             // 색상 초기화
@@ -336,7 +336,7 @@
             };
 
             aliceJs.fetchText('/rest/workflows/' + documentId + '/display', {
-                method: 'PUT',
+                method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
