--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1968,6 +1968,81 @@ label {
   -moz-border-radius: 0.125rem;
 }
 
+.z-checkbox {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #222529;
+  outline: none;
+}
+.z-checkbox > span:first-of-type {
+  padding-right: 1rem;
+}
+.z-checkbox input[type=checkbox] {
+  display: none;
+}
+.z-checkbox input[type=checkbox] + span {
+  position: relative;
+}
+.z-checkbox input[type=checkbox] + span::before {
+  content: "";
+  display: inline-block;
+  width: 1.125rem;
+  height: 1.125rem;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  vertical-align: middle;
+}
+.z-checkbox input[type=checkbox]:not(:disabled) + span {
+  cursor: pointer;
+}
+.z-checkbox input[type=checkbox]:not(:disabled) ~ .label {
+  cursor: pointer;
+}
+.z-checkbox input[type=checkbox]:not(:disabled):checked + span::after {
+  content: "";
+  position: absolute;
+  top: 0.25rem;
+  left: 0;
+  width: 0.75rem;
+  height: 0.375rem;
+  border: 0.125rem solid #0098FF;
+  border-right: none;
+  border-top: none;
+  -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -moz-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -o-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  -ms-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+  transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
+}
+.z-checkbox input[type=checkbox]:not(:disabled):hover + span::before {
+  border-color: #64BBF6;
+  background-color: rgba(0, 152, 255, 0.08);
+}
+.z-checkbox input[type=checkbox]:disabled + span::before {
+  background-color: #EEEEEE;
+}
+.z-checkbox input[type=checkbox]:disabled + span::after {
+  border-color: #ABB0B5;
+}
+.z-checkbox input[type=checkbox]:disabled ~ .label {
+  color: #ABB0B5;
+}
+.z-checkbox:focus input[type=checkbox]:not(:disabled) + span:before {
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.0625rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.0625rem 0 #2578CE;
+  box-shadow: 0 0 0.0625rem 0 #2578CE;
+}
+.z-checkbox:active input[type=checkbox]:not(:disabled) + span:before {
+  border-color: #2578CE;
+  background-color: #ADE6FD;
+}
+
 input:read-only {
   color: #ACB4BF;
   background-color: #F7F8F9;
