--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -910,8 +910,99 @@ label {
   }
 }
 
-// date / time / date time picker
-.#{$common-prefix}datepicker {
+// checkbox
+.#{$common-prefix}checkbox {
+  font-family: $element-font-family;
+  font-size: $element-font-size;
+  font-weight: $element-font-weight;
+  line-height: $element-line-height;
+  color: $element-font-color;
+  outline: none;
 
+  > span:first-of-type {
+    padding-right: $element-indent;
+  }
+
+  input[type=checkbox] {
+    display: none;
+    // 체크 박스 span
+    + span {
+      @include relative();
+
+      &::before {
+        content: '';
+        display: inline-block;
+        width: 1.125rem; // 18px
+        height: 1.125rem; // 18px
+        background-color: $element-bg-color;
+        @include border($element-border-width, solid, $element-border-color, all);
+        @include borderRadius(0.0625rem); // 1px
+        vertical-align: middle;
+      }
+    }
+
+    &:not(:disabled) {
+      + span { cursor: pointer; }
+      ~ .label { cursor: pointer; }
+      &:checked {
+        + span {
+          // 체크 기호
+          &::after {
+            content: '';
+            @include absolute($top: 0.25rem, $left: 0); // 4px
+            width: 0.75rem; // 12px
+            height: 0.375rem; // 6px
+            border: 0.125rem solid $element-checked-bg-color; // 2px
+            border-right: none;
+            border-top: none;
+            @include transform(translate(0.1875rem, 0.25rem) rotate(-45deg)); // 3px, 4px
+          }
+        }
+      }
+
+      &:hover {
+        + span {
+          &::before {
+            border-color: $element-hover-border-color;
+            background-color: $element-hover-bg-color;
+          }
+        }
+      }
+    }
+
+    &:disabled {
+      + span {
+        &::before {
+          background-color: $element-disabled-bg-color;
+        }
+        &::after {
+          border-color: $element-disabled-font-color;
+        }
+      }
+      ~ .label {
+        color: $element-disabled-font-color;
+      }
+    }
+  }
+
+  &:focus {
+    input[type=checkbox]:not(:disabled) {
+      + span {
+        &:before {
+          border-color: $element-focus-border-color;
+          @include boxShadow(0, 0, 0.0625rem, 0, $element-focus-shadow-color);
+        }
+      }
+    }
+  }
+  &:active {
+    input[type=checkbox]:not(:disabled) {
+      + span {
+        &:before {
+          border-color: $element-active-border-color;
+          background-color: $element-active-bg-color;
+        }
+      }
+    }
+  }
 }
-
