--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -44,8 +44,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
-    <script th:src="@{/assets/js/lib/zColorPalette.js}"></script>
-    <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
+    <script th:src="@{/assets/js/lib/zColorPicker.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         // Document status.
@@ -141,36 +140,6 @@
             }
         }
 
-        // ColorPicker 초기화
-        function initColorPicker() {
-            new zColorPicker(document.getElementById('documentColor'), { type: 'fill' });
-            /*let selectedColorBox = document.getElementById('selected-color');
-            let elementObject = document.getElementById('documentColor');
-            // 색상 초기화
-            if (elementObject.value === '') {
-                selectedColorBox.style.backgroundColor = 'rgb(0,0,0)';
-                elementObject.value = '#000000';
-            } else {
-                selectedColorBox.style.backgroundColor = elementObject.value;
-            }
-            elementObject.addEventListener('change', function() {
-                if (this.value.trim() !== '' && !isValidRgb(this.id, true)) {
-                    this.value = '';
-                }
-                selectedColorBox.style.backgroundColor = this.value;
-            });
-            let colorPaletteLayer = document.getElementById('color-palette-layer');
-            let option = {
-                colors: zColorPalette.getPaletteColors('basicPaletteColors'),
-                data : {
-                    isSelected: true,
-                    selectedClass: 'selected',
-                    value: elementObject.value
-                }
-            }
-            zColorPalette.initColorPalette(colorPaletteLayer, selectedColorBox, elementObject, option);*/
-        }
-
         // 신청서 아이콘 선택 팝업
         function openIcon() {
             aliceJs.thumbnail({
@@ -228,7 +197,8 @@
                         closable: false,
                     },
                     onCreate: function(modal) {
-                        initColorPicker();
+                        // color picker 초기화
+                        new zColorPicker(document.getElementById('documentColor'), { type: 'fill' });
                         // 신청서 상태 초기화
                         const statusElem = document.getElementById('document-status');
                         const prevStatus = document.getElementById('prev-document-status').value;
