#10722 color picker 구현 > 적용

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -2040,7 +2040,8 @@ svg g.element-container g.element.selected.error {
 }
 svg g.group-artifact-container g.element .group {
   stroke: #000000;
-  fill-opacity: 0;
+  fill: #FFFFFF;
+  fill-opacity: 1;
   stroke-dasharray: 5, 5;
 }
 svg g.group-artifact-container g.element .node.selected {
@@ -3897,10 +3898,10 @@ svg path.connector.hidden {
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list {
   display: flex;
   flex-direction: row;
-  margin: 0.5rem 0;
+  margin: 0.75rem 0 0.5rem 0;
 }
-.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list > *:not(:last-child) {
-  margin: 0 8px 0 0;
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list > *:not(:first-child) {
+  margin: 0 0 0 8px;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-palette-item {
   position: relative;
@@ -3949,6 +3950,9 @@ svg path.connector.hidden {
   box-shadow: inset 0 0 0 0.0625rem #339AF0;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus {
+  display: none;
+  width: 1.75rem;
+  height: 1.75rem;
   background-color: #FFFFFF;
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
@@ -3957,8 +3961,8 @@ svg path.connector.hidden {
   padding: 0 0.0625rem;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus .z-icon.i-plus {
-  -webkit-mask-size: 0.625rem;
-  mask-size: 0.625rem;
+  width: 0.625rem;
+  height: 0.625rem;
   background: #8B9094;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:focus {
@@ -3982,6 +3986,9 @@ svg path.connector.hidden {
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:enabled:active .z-icon.i-plus, .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus:enabled.active .z-icon.i-plus {
   background: #1959AC;
+}
+.z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list .z-custom-color-plus.on {
+  display: inline-block;
 }
 .z-color-picker-wrapper .z-color-picker-modal .z-custom-color-palette-container .z-custom-color-list.editable .z-custom-color-palette-item .z-custom-color-palette-item-clear {
   visibility: visible;
