--- a/src/main/resources/public/scss/process/_elements.scss
+++ b/src/main/resources/public/scss/process/_elements.scss
@@ -106,8 +106,9 @@ svg {
   g.group-artifact-container {
     g.element {
       .group {
-        stroke: #000000;
-        fill-opacity: 0;
+        stroke: $black;
+        fill: $white;
+        fill-opacity: 1;
         stroke-dasharray: 5, 5;
       }
 
