--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -554,6 +554,9 @@ $tag-invalid-border-color:                   #FFE2E6;
 $input-clear-right:                          0rem;
 $input-bg-icon-color:                        $gray500;
 
+////////////////////////////// check box /////////////////////////////
+$checkbox-indent:                            0.5rem;
+
 /////////////////////////////// slider ///////////////////////////////
 $slider-range-bg-color:                      $neutral200;
 $slider-range-fill-color:                    $blue500;
