--- a/src/main/resources/public/template/cmdb/class/classAttributeList.html
+++ b/src/main/resources/public/template/cmdb/class/classAttributeList.html
@@ -20,7 +20,7 @@
     </tr>
     <tr class="attribute-list" th:each="attribute, index : ${attributeList}">
         <td style="width: 5%;" class="align-center">
-            <label class="checkbox" th:for="${index.index}" tabindex="0">
+            <label class="z-checkbox" th:for="${index.index}" tabindex="0">
                 <input type="checkbox" th:name="${attribute.attributeName}" th:id="${index.index}"
                        th:value="${attribute.attributeId}" th:disabled="${attribute.extends == true}">
                 <span></span>
