--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -39,7 +39,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="flex-row justify-content-end view-row" th:if="!${isPopUp}">
-                <label class="checkbox" for="close" tabindex="0">
+                <label class="z-checkbox" for="close" tabindex="0">
                     <input type="checkbox" id="close" name="close" value="OK" onclick="closePop(1);">
                     <span></span>
                     <span class="label" th:text="#{notice.label.popUpPeriodToday}"></span>
