--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -239,91 +239,6 @@ label {
     }
   }
 }
-// checkbox
-.checkbox {
-  font-family: inherit;
-  font-size: $element-font-size;
-  font-weight: $element-font-weight;
-  line-height: $element-line-height;
-  color: $element-font-color;
-  outline: none;
-
-  > span:first-of-type {
-    padding-right: $element-indent;
-  }
-
-  input[type=checkbox] {
-    display: none;
-    // 체크 박스 span
-    + span {
-      @include relative();
-
-      &::before {
-        content: '';
-        display: inline-block;
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        background-color: $element-bg-color;
-        @include border($element-border-width, solid, $element-border-color, all);
-        @include borderRadius(0.0625rem); // 1px
-        vertical-align: middle;
-      }
-    }
-
-    &:not(:disabled) {
-      + span { cursor: pointer; }
-      ~ .label { cursor: pointer; }
-      &:checked {
-        + span {
-          // 체크 기호
-          &::after {
-            content: '';
-            @include absolute($top: 0.375rem, $left: 0); // 6px
-            width: 0.75rem; // 12px
-            height: 0.375rem; // 6px
-            border: 0.125rem solid $element-checked-bg-color; // 2px
-            border-right: none;
-            border-top: none;
-            @include transform(translate(0.1875rem, 0.25rem) rotate(-45deg)); // 3px, 4px
-          }
-        }
-      }
-
-      &:hover {
-        + span {
-          &::before {
-            border-color: $element-hover-border-color;
-            @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
-          }
-        }
-      }
-    }
-
-    &:disabled {
-      + span {
-        &::before {
-          background-color: $element-disabled-bg-color;
-        }
-        &::after {
-          border-color: $element-disabled-font-color;
-        }
-      }
-      ~ .label {
-        color: $element-disabled-font-color;
-      }
-    }
-  }
-
-  &:focus {
-    input[type=checkbox]:not(:disabled) {
-      + span {
-        &:before {
-          border-color: $element-focus-border-color;
-        }
-      }
-    }
-  }
-}
 // switch
 .switch {
   @include relative();
@@ -920,7 +835,7 @@ label {
   outline: none;
 
   > span:first-of-type {
-    padding-right: $element-indent;
+    padding-right: $checkbox-indent;
   }
 
   input[type=checkbox] {
@@ -934,9 +849,10 @@ label {
         display: inline-block;
         width: 1.125rem; // 18px
         height: 1.125rem; // 18px
-        background-color: $element-bg-color;
+        margin-bottom: 0.125rem; // 2px
         @include border($element-border-width, solid, $element-border-color, all);
-        @include borderRadius(0.0625rem); // 1px
+        @include borderRadius(0.125rem); // 2px
+        background-color: $element-bg-color;
         vertical-align: middle;
       }
     }
@@ -949,7 +865,7 @@ label {
           // 체크 기호
           &::after {
             content: '';
-            @include absolute($top: 0.25rem, $left: 0); // 4px
+            @include absolute($top: 0.125rem, $left: 0); // 2px
             width: 0.75rem; // 12px
             height: 0.375rem; // 6px
             border: 0.125rem solid $element-checked-bg-color; // 2px
