--- a/src/main/resources/public/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/scss/theme/default/_elements.scss
@@ -39,7 +39,7 @@ table[id="documentDisplay"] {
 
 // 체크박스 목록
 // ex) 권한, 역할 > 체크박스 목록
-.checkbox {
+.#{$common-prefix}checkbox {
   &-all {
     display: table-cell;
     padding-top: 0.3125rem; // 5px
