--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1866,9 +1866,13 @@ label {
   left: 0;
   width: 0.75rem;
   height: 0.375rem;
-  border: 0.125rem solid #0098FF;
-  border-right: none;
+  border-bottom: 0.125rem solid #0098FF;
   border-top: none;
+  border-left: 0.125rem solid #0098FF;
+  border-right: none;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
   -webkit-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
   -moz-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
   -o-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
@@ -1897,6 +1901,9 @@ label {
 .z-checkbox:active input[type=checkbox]:not(:disabled) + span:before {
   border-color: #2578CE;
   background-color: #ADE6FD;
+}
+.z-checkbox:active input[type=checkbox]:not(:disabled) + span:after {
+  border-color: #2578CE;
 }
 
 /* _print.scss 
